@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;11000900">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20031205;18035900">
+	<META NAME="CHANGED" CONTENT="20031206;16325100">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate, sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
@@ -55,54 +55,53 @@
 		</TR>
 	</TABLE>
 </FORM>
-<TABLE WIDTH=506 BORDER=0 CELLPADDING=0 CELLSPACING=0>
-	<COL WIDTH=170>
-	<COL WIDTH=336>
+<TABLE WIDTH=100% BORDER=1 BORDERCOLOR="#000000" CELLPADDING=2 CELLSPACING=0 RULES=ROWS>
+	<COL WIDTH=74*>
+	<COL WIDTH=182*>
 	<TR VALIGN=TOP>
-		<TD WIDTH=170>
+		<TD WIDTH=29%>
 			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Latest
-			Release:</SPAN></I></FONT></P>
+			Stable Release:</SPAN></I></FONT></P>
 		</TD>
-		<TD WIDTH=336>
-			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent"><A HREF="http://sourceforge.net/project/showfiles.php?group_id=73485">1.0.3</A></SPAN></I></FONT></P>
+		<TD WIDTH=71%>
+			<P><A HREF="http://sourceforge.net/project/showfiles.php?group_id=73485"><SPAN STYLE="background: transparent"><I><FONT SIZE=3>1.0.4</FONT></I></SPAN></A></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
-		<TD WIDTH=170>
+		<TD WIDTH=29%>
 			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Next
 			Major Release: </SPAN></I></FONT>
 			</P>
 		</TD>
-		<TD WIDTH=336>
-			<P><FONT SIZE=3><I><SPAN STYLE="background: transparent">1.1
+		<TD WIDTH=71%>
+			<P><SPAN STYLE="background: transparent"><I><FONT SIZE=3>1.1
 			(<A HREF="ftp://@ftp.graphicsmagick.org/pub/GraphicsMagick/snapshots">currently
-			in development snapshots</A>)</SPAN></I></FONT></P>
+			in development snapshots</A>)</FONT></I></SPAN></P>
 		</TD>
 	</TR>
 </TABLE>
-<HR>
-<P><FONT SIZE=3><I>GraphicsMagick</I> 1.0.3 is a robust collection of
-tools and libraries which support reading, writing, and manipulating
-an image in over 88 major formats including popular formats like
-TIFF, JPEG, JPEG-2000, PNG, PDF, PhotoCD, SVG, and GIF.
-<I>GraphicsMagick</I> supports creating new images on the fly, making
-<I>it </I>suitable for building dynamic Web applications.
-GraphicsMagick may be used to resize, rotate, sharpen, color reduce,
-or add special effects to an image and save the result in the same or
-differing image format. Image processing operations are available
-from the command line, as well as through C, C++, Perl, Java, or
-Windows COM programming interfaces. Extensions are available from
-third-parties to support <A HREF="www/programming.html">programming</A>
-in Borland's Delphi, Java, PHP, Python, Scheme, and Ruby.</FONT></P>
+<P><FONT SIZE=3><I>GraphicsMagick</I> is a robust collection of tools
+and libraries which support reading, writing, and manipulating an
+image in over 88 major formats including popular formats like TIFF,
+JPEG, JPEG-2000, PNG, PDF, PhotoCD, SVG, and GIF. <I>GraphicsMagick</I>
+supports creating new images on the fly, making <I>it </I>suitable
+for building dynamic Web applications. GraphicsMagick may be used to
+resize, rotate, sharpen, color reduce, or add special effects to an
+image and save the result in the same or differing image format.
+Image processing operations are available from the command line, as
+well as through C, C++, Perl, Java, or Windows COM programming
+interfaces. Extensions are available from third-parties to support
+<A HREF="www/programming.html">programming</A> in Borland's Delphi,
+Java, PHP, Python, Scheme, and Ruby.</FONT></P>
 <P><FONT SIZE=3><I><SPAN STYLE="background: transparent">Gr</SPAN>aphicsMagick</I>
 is </FONT><A HREF="www/Copyright.html"><FONT SIZE=3>copyrighted</FONT></A>
 <FONT SIZE=3>by the GraphicsMagick Group. GraphicsMagick is
 originally derived from <A HREF="http://www.imagemagick.org/">ImageMagick</A>
 5.5.2, and has enjoyed many improvements (<A HREF="www/NEWS.html">see
-news</A>) by <A HREF="www/AUTHORS.html">many authors</A>.
-<I>GraphicsMagick</I> is available for free, may be used to support
-both open and proprietary applications, and may be redistributed
-without fee.</FONT></P>
+news</A>) by <A HREF="www/AUTHORS.html">many authors</A> using an
+open development model. <I>GraphicsMagick</I> is available for free,
+may be used to support both open and proprietary applications, and
+may be redistributed without fee.</FONT></P>
 <P><FONT SIZE=3>Here are just a few </FONT><A HREF="images/examples.jpg"><FONT SIZE=3>examples</FONT></A>
 <FONT SIZE=3>of what <I>GraphicsMagick</I> can do:</FONT></P>
 <DL>
