@@ -56,6 +56,8 @@
 2003-12-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> doc/options.imdoc (use): Describe the syntax of the -process
+        argument.<BR>
   <LI> acinclude.m4 (AC_CHECK_CC_OPT): Add quoting in AC_CHECK_CC_OPT
         definition.  Change suggested by Patrick Welche
 
